# RobotGUI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Info.plist  cmake_install.cmake  globals.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manual.cpp  manual.h  patientdatabase.cpp  patientdatabase.h  qtcsettings.cmake  resources.qrc  svgviewer.cpp  svgviewer.h
.cmake/api/v1/reply/: cache-v2-89cce61cdbadc25e8fad.json  cmakeFiles-v1-353cabd0bfb37e7d5f06.json  codemodel-v2-ff5e14370b687e5c511a.json  directory-.-Build-ec91101f4cb72b1185d8.json  index-2025-04-18T00-55-06-0687.json  target-RobotGUI-Build-ed8ac965f7f8c1c18693.json  target-RobotGUI_autogen-Build-3fd3fd766e6d95e52734.json  target-RobotGUI_autogen_timestamp_deps-Build-8bad9000c2296dab4caf.json
.qt/: QtDeploySupport.cmake
resources/: map.json
